--- a/css/response.css
+++ b/css/response.css
@@ -65,6 +65,29 @@
     font-size: 17px;
   }
 
+  #wrap #top {
+    overflow: hidden;
+    display: none;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    z-index: 3;
+    width: 35px;
+    height: 35px;
+  }
+  #wrap #top a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 50%;
+    font-size: 18px;
+    line-height: 35px;
+    text-align: center;
+    color: #fff;
+    margin: auto;
+  }
+
   #wrap #footer .container .gap .wrap > ul {
     width: 100%;
     display: flex;
@@ -113,13 +136,16 @@
 }
 @media all and (max-width: 770px) {
   #wrap #main #section1 {
-    height: 150vh;
+    width: 100vw;
   }
   #wrap #main #section1 .slide-container .slide-view .section1-btn span {
     display: none;
   }
   #wrap #main #section1 .slide-container .slide-view .section1-btn .button {
     margin: 0 auto;
+  }
+  #wrap #main #section1 .slide-container .slide-view .section1-btn .button ul {
+    width: 80vw;
   }
   #wrap #main #section1 .slide-container .slide-view .section1-btn .button ul li a > i {
     height: 4px;
@@ -198,7 +224,7 @@
     display: block;
   }
   #wrap #main #section4 .container .gap .wrap ul {
-    padding: 150px 0 0 0;
+    padding: 80px 0 0 0;
   }
   #wrap #main #section4 .container .gap .wrap ul li h2 {
     font-size: 37px;
@@ -219,5 +245,59 @@
   }
   #wrap #main #section4 .container .gap .wrap ul li br {
     display: block;
+  }
+}
+@media all and (max-width: 600px) {
+  #wrap #main #section3 .container .gap .wrap .title .menu img {
+    width: 80vw;
+  }
+
+  #wrap #main #section5 .container .gap .wrap .title .menu img {
+    width: 80vw;
+  }
+
+  #wrap #main #section6 .container .gap .wrap .title .sns img {
+    width: 80vw;
+  }
+}
+@media all and (max-width: 530px) {
+  #wrap #main #section4 .container .img-box .mobile-img {
+    height: 90vh;
+  }
+  #wrap #main #section4 .container .gap {
+    width: 100%;
+    left: 0;
+    text-align: center;
+  }
+  #wrap #main #section4 .container .gap .wrap {
+    display: block;
+  }
+  #wrap #main #section4 .container .gap .wrap ul {
+    padding: 30px 20px 20px 20px;
+  }
+  #wrap #main #section4 .container .gap .wrap ul li h2 {
+    font-size: 6.34615vw;
+  }
+  #wrap #main #section4 .container .gap .wrap ul li p {
+    font-size: 3.5vw;
+  }
+  #wrap #main #section4 .container .gap .wrap ul li p br {
+    display: none;
+  }
+  #wrap #main #section4 .container .gap .wrap ul li button {
+    width: 34.61538vw;
+    height: 45px;
+    font-size: 15px;
+  }
+  #wrap #main #section4 .container .gap .wrap ul li button:first-child {
+    width: 71.15384vw;
+  }
+  #wrap #main #section4 .container .gap .wrap ul li br {
+    display: block;
+  }
+
+  #wrap #top {
+    bottom: 25px;
+    right: 25px;
   }
 }
