--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,7 @@
 #wrap #main #section1 {
   width: 100%;
   height: 93vh;
+  overflow: hidden;
   position: relative;
   z-index: 1;
 }
@@ -450,6 +451,7 @@
   top: 70px;
   left: 15px;
   color: #fff;
+  margin-right: 15px;
 }
 #wrap #main #section2 .container .slide-container .icon1 i {
   font-size: 35px;
@@ -470,6 +472,9 @@
   width: 50%;
   height: 70px;
 }
+#wrap #main #section2 .container .slide-container .slide-view .slide-wrap .slide .col-gap {
+  margin: 0 20px;
+}
 #wrap #main #section2 .container .slide-container .slide-view .slide-wrap .slide .col-gap .col-wrap {
   height: 70px;
   display: flex;
@@ -477,7 +482,7 @@
 }
 #wrap #main #section2 .container .slide-container .slide-view .slide-wrap .slide .col-gap .col-wrap h2 {
   width: 70%;
-  margin-left: 20px;
+  margin-left: 10px;
   color: #fff;
   font-size: 16px;
   white-space: nowrap;
@@ -489,15 +494,16 @@
 }
 #wrap #main #section2 .container .slide-container .slide-view .slide-wrap .slide .col-gap .col-wrap .plus {
   width: 30%;
-  margin: 0 30px 0 auto;
+  margin: 0 10px 0 auto;
+  white-space: nowrap;
 }
 #wrap #main #section2 .container .slide-container .slide-view .slide-wrap .slide .col-gap .col-wrap .plus span {
   color: #fff;
   font-size: 14px;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 #wrap #main #section2 .container .slide-container .slide-view .slide-wrap .slide .col-gap .col-wrap .plus a img {
-  margin-left: 10px;
+  margin: 0 10px;
 }
 #wrap #main #section3 {
   width: 100%;
@@ -741,6 +747,7 @@
   width: 100vw;
   height: 130vh;
   background: url(../images/section2_bg_m.jpg) no-repeat 50% 100%;
+  background-size: cover;
 }
 #wrap #main #section4 .container .gap {
   width: 50%;
@@ -1188,6 +1195,7 @@
   }
 }
 #wrap #top {
+  overflow: hidden;
   display: none;
   position: fixed;
   bottom: 100px;
@@ -1210,6 +1218,7 @@
 }
 #wrap #footer {
   width: 100%;
+  overflow: hidden;
   position: relative;
   z-index: 1;
   background: #efefef;
