--- a/scss/response.scss
+++ b/scss/response.scss
@@ -77,7 +77,29 @@
             font-size:17px;
         }
     }
-
+    #wrap #top {
+        overflow: hidden;
+        display: none;
+        position: fixed;
+        bottom: 50px;
+        right: 50px;
+        z-index: 3;
+        width: 35px;
+        height: 35px;
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 50%;
+            font-size: 18px;
+            line-height: 35px;
+            text-align: center;
+            color: #fff;
+            margin: auto;
+          }
+      }
+      
     #wrap #footer .container .gap .wrap > ul {
         width: 100%;
         display: flex;
@@ -133,7 +155,7 @@
 
 @media all and (max-width:770px){
     #wrap #main #section1 {
-        height:150vh;
+        width:100vw;
         .slide-container .slide-view {
             .section1-btn {
                 span {
@@ -142,6 +164,7 @@
                 .button {
                     margin:0 auto;
                     ul {
+                        width:80vw;
                         li {
                             a {
                                 > i {
@@ -252,7 +275,7 @@
         .wrap {
             display:block;
             ul {
-                padding:150px 0 0 0;
+                padding:80px 0 0 0;
                 li {
                     h2 {
                         font-size:37px;
@@ -278,4 +301,62 @@
             }
         }
     }
+}
+@media all and (max-width:600px){
+    #wrap #main #section3 .container .gap .wrap .title .menu img {
+        width:80vw;
+    }
+    #wrap #main #section5 .container .gap .wrap .title .menu img {
+        width:80vw;
+    }
+    #wrap #main #section6 .container .gap .wrap .title .sns img {
+        width:80vw;
+    }
+}
+
+@media all and (max-width:530px){      
+    #wrap #main #section4 .container {
+        .img-box .mobile-img {
+            height: 90vh;
+        }
+        .gap {
+            width:100%;
+            left:0;
+            text-align:center;
+            .wrap {
+                display:block;
+                ul {
+                    padding:30px 20px 20px 20px;
+                    li {
+                        h2 {
+                            font-size:6.34615vw;
+                        }
+                        p {
+                            font-size:3.5vw;
+                            br {
+                                display:none;
+                            }
+                        }
+                        button {
+                            width:34.61538vw;
+                            height:45px;
+                            font-size:15px;
+                            &:first-child{
+                                width:71.15384vw;
+                            }
+                        }
+                        br {
+                            display:block;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    #wrap #top {
+        bottom: 25px;
+        right: 25px;
+      }
+
 }
