--- a/scss/style.scss
+++ b/scss/style.scss
@@ -387,6 +387,7 @@ $container-width: 1400px;
         #section1 {
             width:100%;
             height:93vh;
+            overflow:hidden;
             position:relative;
             z-index:1;
             .slide-container {
@@ -501,6 +502,7 @@ $container-width: 1400px;
                         top:70px;
                         left:15px;
                         color:#fff;
+                        margin-right:15px;
                         i {
                             font-size:35px;
                             line-height:70px;
@@ -519,13 +521,14 @@ $container-width: 1400px;
                                 width:50%;
                                 height:70px;
                                 .col-gap {
+                                    margin:0 20px;
                                     .col-wrap {
                                         height:70px;
                                         display:flex;
                                         align-items:center;
                                         h2 {
                                             width:70%;
-                                            margin-left:20px;
+                                            margin-left:10px;
                                             color:#fff;
                                             font-size:16px;
                                             white-space: nowrap;
@@ -537,15 +540,16 @@ $container-width: 1400px;
                                         }
                                         .plus {
                                             width:30%;
-                                            margin:0 30px 0 auto;
+                                            margin:0 10px 0 auto;
+                                            white-space:nowrap;
                                             span {
                                                 color:#fff;
                                                 font-size:14px;
-                                                margin-left:20px;
+                                                margin-left:10px;
                                             }        
                                             a {
                                                 img {
-                                                    margin-left:10px;
+                                                    margin:0 10px;
                                                 }    
                                             }
                                         }
@@ -770,7 +774,9 @@ $container-width: 1400px;
                         display:none;
                         width:100vw;
                         height:130vh;
+                        // height:130vh;
                         background:url(../images/section2_bg_m.jpg) no-repeat 50% 100%;
+                        background-size:cover;
                     }
                 }
                 .gap {
@@ -1120,6 +1126,7 @@ $container-width: 1400px;
 
     }
     #top {
+        overflow:hidden;
         display:none;
         position:fixed;
         bottom:100px;
@@ -1144,6 +1151,7 @@ $container-width: 1400px;
 
     #footer {
         width:100%;
+        overflow:hidden;
         position:relative;
         z-index:1;
         
