tomntoms portfolio 완성배포

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -684,7 +684,7 @@ $container-width: 1400px;
                                                                 background:url() no-repeat 50% 50%;
                                                                 background-size:cover;
                                                                 width:100%;
-                                                                height:500px;
+                                                                height:49.65243vh;
                                                                 transition:all .3s;
                                                                 outline:1px solid rgba(255,255,255, 0);
                                                                 outline-offset:0;                
@@ -982,7 +982,7 @@ $container-width: 1400px;
                                                                 background:url() no-repeat 50% 50%;
                                                                 background-size:cover;
                                                                 width:100%;
-                                                                height:500px;
+                                                                height:49.65243vh;
                                                                 transition:all .3s;
                                                                 outline:1px solid rgba(255,255,255, 0);
                                                                 outline-offset:0;                
