--- a/css/style.css
+++ b/css/style.css
@@ -634,7 +634,7 @@
   background: url() no-repeat 50% 50%;
   background-size: cover;
   width: 100%;
-  height: 500px;
+  height: 49.65243vh;
   transition: all 0.3s;
   outline: 1px solid rgba(255, 255, 255, 0);
   outline-offset: 0;
@@ -974,7 +974,7 @@
   background: url() no-repeat 50% 50%;
   background-size: cover;
   width: 100%;
-  height: 500px;
+  height: 49.65243vh;
   transition: all 0.3s;
   outline: 1px solid rgba(255, 255, 255, 0);
   outline-offset: 0;
